[ADD] Start game command

--- a/doc/latex/_u_d_p_server_8hpp_source.tex
+++ b/doc/latex/_u_d_p_server_8hpp_source.tex
@@ -63,10 +63,11 @@
 \DoxyCodeLine{00169\ }
 \DoxyCodeLine{00170\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{comment}{//\ Command\ handling\ functions}}
 \DoxyCodeLine{00171\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ helloCommand(\mbox{\hyperlink{struct_message}{Message}}\ *message);\ }
-\DoxyCodeLine{00172\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ nameCommand(\mbox{\hyperlink{struct_message}{Message}}\ *message);\ }
-\DoxyCodeLine{00173\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ joinCommand(\mbox{\hyperlink{struct_message}{Message}}\ *message);\ }
-\DoxyCodeLine{00174\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ keyCommand(\mbox{\hyperlink{struct_message}{Message}}\ *message);\ }
-\DoxyCodeLine{00175\ \ \ \ \ \};}
-\DoxyCodeLine{00176\ \}}
+\DoxyCodeLine{00172\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ updateNameCommand(\mbox{\hyperlink{struct_message}{Message}}\ *message);\ }
+\DoxyCodeLine{00173\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ joinRoomCommand(\mbox{\hyperlink{struct_message}{Message}}\ *message);\ }
+\DoxyCodeLine{00174\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ inputCommand(\mbox{\hyperlink{struct_message}{Message}}\ *message);\ }
+\DoxyCodeLine{00175\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ startGameCommand(\mbox{\hyperlink{struct_message}{Message}}\ *message);\ }
+\DoxyCodeLine{00176\ \ \ \ \ \};}
+\DoxyCodeLine{00177\ \}}
 
 \end{DoxyCode}
