--- a/doc/latex/hierarchy.tex
+++ b/doc/latex/hierarchy.tex
@@ -9,6 +9,7 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \begin{DoxyCompactList}
 \item \contentsline{section}{Component\+Array\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}}{\pageref{class_component_array}}{}
 \end{DoxyCompactList}
+\item \contentsline{section}{Input\+Data}{\pageref{struct_input_data}}{}
 \item \contentsline{section}{Client\+::Input\+Text}{\pageref{class_client_1_1_input_text}}{}
 \item \contentsline{section}{Client\+::IScene}{\pageref{class_client_1_1_i_scene}}{}
 \begin{DoxyCompactList}
@@ -25,11 +26,11 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{Response\+Header}{\pageref{struct_response_header}}{}
 \item \contentsline{section}{Network\+::Room}{\pageref{class_network_1_1_room}}{}
 \item \contentsline{section}{Client\+::Scene\+Manager}{\pageref{class_client_1_1_scene_manager}}{}
-\item \contentsline{section}{Send\+Name\+Data}{\pageref{struct_send_name_data}}{}
+\item \contentsline{section}{Start\+Game\+Data}{\pageref{struct_start_game_data}}{}
 \item \contentsline{section}{System}{\pageref{class_system}}{}
 \item \contentsline{section}{System\+Manager}{\pageref{class_system_manager}}{}
 \item \contentsline{section}{Network\+::Thread\+Safe\+Queue\texorpdfstring{$<$}{<} T \texorpdfstring{$>$}{>}}{\pageref{class_network_1_1_thread_safe_queue}}{}
 \item \contentsline{section}{Network\+::Thread\+Safe\+Queue\texorpdfstring{$<$}{<} Message \texorpdfstring{$\ast$}{*} \texorpdfstring{$>$}{>}}{\pageref{class_network_1_1_thread_safe_queue}}{}
-\item \contentsline{section}{Try\+Move\+Data}{\pageref{struct_try_move_data}}{}
 \item \contentsline{section}{Network\+::UDPServer}{\pageref{class_network_1_1_u_d_p_server}}{}
+\item \contentsline{section}{Update\+Name\+Data}{\pageref{struct_update_name_data}}{}
 \end{DoxyCompactList}
