--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -222,6 +222,7 @@
 \input{class_entity_manager}
 \input{class_client_1_1_game_scene}
 \input{class_i_component_array}
+\input{struct_input_data}
 \input{class_client_1_1_input_text}
 \input{class_client_1_1_i_scene}
 \input{struct_join_room_data}
@@ -234,12 +235,12 @@
 \input{struct_response_header}
 \input{class_network_1_1_room}
 \input{class_client_1_1_scene_manager}
-\input{struct_send_name_data}
+\input{struct_start_game_data}
 \input{class_system}
 \input{class_system_manager}
 \input{class_network_1_1_thread_safe_queue}
-\input{struct_try_move_data}
 \input{class_network_1_1_u_d_p_server}
+\input{struct_update_name_data}
 \input{class_client_1_1_welcome_scene}
 \chapter{File Documentation}
 \input{_background_8hpp_source}
