--- a/doc/latex/struct_input_data.tex
+++ b/doc/latex/struct_input_data.tex
@@ -1,9 +1,9 @@
-\doxysection{Try\+Move\+Data Struct Reference}
-\hypertarget{struct_try_move_data}{}\label{struct_try_move_data}\index{InputData@{InputData}}
+\doxysection{Input\+Data Struct Reference}
+\hypertarget{struct_input_data}{}\label{struct_input_data}\index{InputData@{InputData}}
 \doxysubsubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\Hypertarget{struct_try_move_data_a08cee21ae83b476936c3f89b8738a14a}\label{struct_try_move_data_a08cee21ae83b476936c3f89b8738a14a} 
+\Hypertarget{struct_input_data_a63bb754a4032d719b927887a99e7d7d0}\label{struct_input_data_a63bb754a4032d719b927887a99e7d7d0} 
 char {\bfseries key} \mbox{[}1\mbox{]}
 \end{DoxyCompactItemize}
 
