--- a/doc/latex/struct_send_name_data.tex
+++ b/doc/latex/struct_send_name_data.tex
@@ -1,5 +1,5 @@
 \doxysection{Send\+Name\+Data Struct Reference}
-\hypertarget{struct_send_name_data}{}\label{struct_send_name_data}\index{SendNameData@{SendNameData}}
+\hypertarget{struct_send_name_data}{}\label{struct_send_name_data}\index{UpdateNameData@{UpdateNameData}}
 \doxysubsubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
