--- a/doc/latex/_commands_8hpp_source.tex
+++ b/doc/latex/_commands_8hpp_source.tex
@@ -7,8 +7,9 @@
 \DoxyCodeLine{00003\ \textcolor{comment}{//}}
 \DoxyCodeLine{00004\ }
 \DoxyCodeLine{00005\ \textcolor{preprocessor}{\#define\ HELLO\_COMMAND\ "{}/hello"{}}}
-\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#define\ NAME\_COMMAND\ "{}/name"{}}}
-\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#define\ JOIN\_COMMAND\ "{}/join"{}}}
-\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#define\ KEY\_COMMAND\ "{}/key"{}}}
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#define\ UPDATE\_NAME\_COMMAND\ "{}/update\_name"{}}}
+\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#define\ JOIN\_ROOM\_COMMAND\ "{}/join\_room"{}}}
+\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#define\ INPUT\_COMMAND\ "{}/input"{}}}
+\DoxyCodeLine{00009\ \textcolor{preprocessor}{\#define\ START\_GAME\_COMMAND\ "{}/start\_game"{}}}
 
 \end{DoxyCode}
