--- a/doc/latex/_messages_8hpp_source.tex
+++ b/doc/latex/_messages_8hpp_source.tex
@@ -20,7 +20,7 @@
 \DoxyCodeLine{00016\ \};}
 \DoxyCodeLine{00017\ }
 \DoxyCodeLine{00018\ \textcolor{comment}{//\ Name\ command}}
-\DoxyCodeLine{00019\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_send_name_data}{SendNameData}}\ \{}
+\DoxyCodeLine{00019\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_update_name_data}{UpdateNameData}}\ \{}
 \DoxyCodeLine{00020\ \ \ \textcolor{keywordtype}{char}\ name[32];}
 \DoxyCodeLine{00021\ \};}
 \DoxyCodeLine{00022\ }
@@ -29,8 +29,14 @@
 \DoxyCodeLine{00025\ \ \ \textcolor{keywordtype}{int}\ roomId;}
 \DoxyCodeLine{00026\ \};}
 \DoxyCodeLine{00027\ }
-\DoxyCodeLine{00028\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_try_move_data}{TryMoveData}}\ \{}
-\DoxyCodeLine{00029\ \ \ \textcolor{keywordtype}{char}\ key[1];}
-\DoxyCodeLine{00030\ \};}
+\DoxyCodeLine{00028\ \textcolor{comment}{//\ Input\ command}}
+\DoxyCodeLine{00029\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_input_data}{InputData}}\ \{}
+\DoxyCodeLine{00030\ \ \ \textcolor{keywordtype}{char}\ key[1];}
+\DoxyCodeLine{00031\ \};}
+\DoxyCodeLine{00032\ }
+\DoxyCodeLine{00033\ \textcolor{comment}{//\ Start\ game\ command}}
+\DoxyCodeLine{00034\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_start_game_data}{StartGameData}}\ \{}
+\DoxyCodeLine{00035\ \ \ \textcolor{keywordtype}{int}\ roomId;}
+\DoxyCodeLine{00036\ \};}
 
 \end{DoxyCode}
