--- a/doc/latex/annotated.tex
+++ b/doc/latex/annotated.tex
@@ -8,6 +8,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{class_entity_manager}{Entity\+Manager}} }{\pageref{class_entity_manager}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_client_1_1_game_scene}{Client\+::\+Game\+Scene}} }{\pageref{class_client_1_1_game_scene}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_i_component_array}{IComponent\+Array}} }{\pageref{class_i_component_array}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_input_data}{Input\+Data}} }{\pageref{struct_input_data}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_client_1_1_input_text}{Client\+::\+Input\+Text}} }{\pageref{class_client_1_1_input_text}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_client_1_1_i_scene}{Client\+::\+IScene}} }{\pageref{class_client_1_1_i_scene}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_join_room_data}{Join\+Room\+Data}} }{\pageref{struct_join_room_data}}{}
@@ -20,11 +21,11 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{struct_response_header}{Response\+Header}} }{\pageref{struct_response_header}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_network_1_1_room}{Network\+::\+Room}} \\*Represents a room in the network context }{\pageref{class_network_1_1_room}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_client_1_1_scene_manager}{Client\+::\+Scene\+Manager}} }{\pageref{class_client_1_1_scene_manager}}{}
-\item\contentsline{section}{\mbox{\hyperlink{struct_send_name_data}{Send\+Name\+Data}} }{\pageref{struct_send_name_data}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_start_game_data}{Start\+Game\+Data}} }{\pageref{struct_start_game_data}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_system}{System}} }{\pageref{class_system}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_system_manager}{System\+Manager}} }{\pageref{class_system_manager}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_network_1_1_thread_safe_queue}{Network\+::\+Thread\+Safe\+Queue$<$ T $>$}} \\*A thread-\/safe queue implementation }{\pageref{class_network_1_1_thread_safe_queue}}{}
-\item\contentsline{section}{\mbox{\hyperlink{struct_try_move_data}{Try\+Move\+Data}} }{\pageref{struct_try_move_data}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_network_1_1_u_d_p_server}{Network\+::\+UDPServer}} \\*Manages a UDP server for handling network communication }{\pageref{class_network_1_1_u_d_p_server}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_update_name_data}{Update\+Name\+Data}} }{\pageref{struct_update_name_data}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_client_1_1_welcome_scene}{Client\+::\+Welcome\+Scene}} }{\pageref{class_client_1_1_welcome_scene}}{}
 \end{DoxyCompactList}
