--- a/doc/latex/class_client_1_1_network.tex
+++ b/doc/latex/class_client_1_1_network.tex
@@ -18,14 +18,17 @@ void {\bfseries send\+Message} (const std\+::string \&command, const char \texor
 \Hypertarget{class_client_1_1_network_a4e6e450be2f058ef29e21b5a17f3e5ee}\label{class_client_1_1_network_a4e6e450be2f058ef29e21b5a17f3e5ee} 
 void {\bfseries connect\+To\+Server} ()
 \item 
-\Hypertarget{class_client_1_1_network_ae27fd1a5523ae53450c7a1dd150bd410}\label{class_client_1_1_network_ae27fd1a5523ae53450c7a1dd150bd410} 
-void {\bfseries send\+Name} (std\+::string name)
+\Hypertarget{class_client_1_1_network_a9090adb4709e633a7787595896adcc07}\label{class_client_1_1_network_a9090adb4709e633a7787595896adcc07} 
+void {\bfseries update\+Name} (std\+::string name)
 \item 
 \Hypertarget{class_client_1_1_network_af9322d011cea31df49fe776392ad0648}\label{class_client_1_1_network_af9322d011cea31df49fe776392ad0648} 
 void {\bfseries join\+Room} (int room\+Id)
 \item 
 \Hypertarget{class_client_1_1_network_a834301699563164adcfb6f34e95bba2c}\label{class_client_1_1_network_a834301699563164adcfb6f34e95bba2c} 
 void {\bfseries send\+Key} (std\+::string key)
+\item 
+\Hypertarget{class_client_1_1_network_ac8d152775dc2181fc2989709f3dfd204}\label{class_client_1_1_network_ac8d152775dc2181fc2989709f3dfd204} 
+void {\bfseries start\+Game} (int room\+Id)
 \item 
 \Hypertarget{class_client_1_1_network_a02b0fb41b307eb039b3e91026497ff12}\label{class_client_1_1_network_a02b0fb41b307eb039b3e91026497ff12} 
 void {\bfseries set\+Client\+Id} (int id)
