[REFACTO] fix for ecs Mediator->Registry

--- a/docs/technical/latex/class_mediator.tex
+++ b/docs/technical/latex/class_mediator.tex
@@ -1,5 +1,5 @@
-\doxysection{Mediator Class Reference}
-\hypertarget{class_mediator}{}\label{class_mediator}\index{Mediator@{Mediator}}
+\doxysection{Registry Class Reference}
+\hypertarget{class_mediator}{}\label{class_mediator}\index{Registry@{Registry}}
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -37,4 +37,4 @@ void {\bfseries destroy\+Entity} (Entity entity)
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/Mediator.\+hpp\end{DoxyCompactItemize}
+/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/Registry.\+hpp\end{DoxyCompactItemize}
