--- a/docs/technical/latex/files.tex
+++ b/docs/technical/latex/files.tex
@@ -10,7 +10,7 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/client/include/\+Scenes/\mbox{\hyperlink{_lobby_8hpp_source}{Lobby.\+hpp}} }{\pageref{_lobby_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/client/include/\+Scenes/\mbox{\hyperlink{_manager_8hpp_source}{Manager.\+hpp}} }{\pageref{_manager_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/client/include/\+Scenes/\mbox{\hyperlink{_welcome_8hpp_source}{Welcome.\+hpp}} }{\pageref{_welcome_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/\mbox{\hyperlink{_mediator_8hpp_source}{Mediator.\+hpp}} }{\pageref{_mediator_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/\mbox{\hyperlink{_mediator_8hpp_source}{Registry.\+hpp}} }{\pageref{_mediator_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/\mbox{\hyperlink{_signature_8hpp_source}{Signature.\+hpp}} }{\pageref{_signature_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/component/\mbox{\hyperlink{_component_8hpp_source}{Component.\+hpp}} }{\pageref{_component_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/component/\mbox{\hyperlink{_component_array_8hpp_source}{Component\+Array.\+hpp}} }{\pageref{_component_array_8hpp_source}}{}
