--- a/docs/technical/latex/hierarchy.tex
+++ b/docs/technical/latex/hierarchy.tex
@@ -26,7 +26,7 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{Client\+::Welcome\+Scene}{\pageref{class_client_1_1_welcome_scene}}{}
 \end{DoxyCompactList}
 \item \contentsline{section}{Join\+Room\+Data}{\pageref{struct_join_room_data}}{}
-\item \contentsline{section}{Mediator}{\pageref{class_mediator}}{}
+\item \contentsline{section}{Registry}{\pageref{class_mediator}}{}
 \item \contentsline{section}{Message}{\pageref{struct_message}}{}
 \item \contentsline{section}{Message\+Header}{\pageref{struct_message_header}}{}
 \item \contentsline{section}{Client\+::Network}{\pageref{class_client_1_1_network}}{}
