--- a/docs/technical/latex/_mediator_8hpp_source.tex
+++ b/docs/technical/latex/_mediator_8hpp_source.tex
@@ -1,5 +1,5 @@
-\doxysection{Mediator.\+hpp}
-\hypertarget{_mediator_8hpp_source}{}\label{_mediator_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/Mediator.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/Mediator.hpp}}
+\doxysection{Registry.\+hpp}
+\hypertarget{_mediator_8hpp_source}{}\label{_mediator_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/Registry.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/Registry.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{//}}
@@ -16,7 +16,7 @@
 \DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ "{}entity/EntityManager.hpp"{}}}
 \DoxyCodeLine{00013\ \textcolor{preprocessor}{\#include\ "{}system/SystemManager.hpp"{}}}
 \DoxyCodeLine{00014\ }
-\DoxyCodeLine{00015\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_mediator}{Mediator}}\ \{}
+\DoxyCodeLine{00015\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_mediator}{Registry}}\ \{}
 \DoxyCodeLine{00016\ \textcolor{keyword}{public}:}
 \DoxyCodeLine{00017\ }
 \DoxyCodeLine{00018\ \ \ \ \ \textcolor{keywordtype}{void}\ Init()}
