--- a/docs/technical/latex/annotated.tex
+++ b/docs/technical/latex/annotated.tex
@@ -17,7 +17,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{class_network_1_1_join_room_command_handler}{Network\+::\+Join\+Room\+Command\+Handler}} }{\pageref{class_network_1_1_join_room_command_handler}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_join_room_data}{Join\+Room\+Data}} \\*Structure for data related to a \textquotesingle{}Join Room\textquotesingle{} command }{\pageref{struct_join_room_data}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_client_1_1_lobby_scene}{Client\+::\+Lobby\+Scene}} }{\pageref{class_client_1_1_lobby_scene}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_mediator}{Mediator}} }{\pageref{class_mediator}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_mediator}{Registry}} }{\pageref{class_mediator}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_message}{Message}} \\*Structure representing a complete network message }{\pageref{struct_message}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_message_header}{Message\+Header}} \\*Structure representing the header of a network message }{\pageref{struct_message_header}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_client_1_1_network}{Client\+::\+Network}} }{\pageref{class_client_1_1_network}}{}
