[ADD] scene management client

--- a/docs/technical/latex/_manager_8hpp_source.tex
+++ b/docs/technical/latex/_manager_8hpp_source.tex
@@ -29,14 +29,14 @@
 \DoxyCodeLine{00025\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ draw(sf::RenderWindow\ \&window)\ =\ 0;}
 \DoxyCodeLine{00026\ \ \ \ \ \};}
 \DoxyCodeLine{00027\ }
-\DoxyCodeLine{00028\ \ \ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}\ \{}
+\DoxyCodeLine{00028\ \ \ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}\ \{}
 \DoxyCodeLine{00029\ \ \ \ \ \ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00030\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}()\ =\ \textcolor{keyword}{delete};}
-\DoxyCodeLine{00031\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{\string~SceneManager}}()\ =\ \textcolor{keyword}{delete};}
-\DoxyCodeLine{00032\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}(\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}\ \textcolor{keyword}{const}\ \&toCopy)\ =\ \textcolor{keyword}{delete};}
-\DoxyCodeLine{00033\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}(\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}\ \&\&toMove)\ =\ \textcolor{keyword}{delete};}
-\DoxyCodeLine{00034\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}\ \&operator=(\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}\ \textcolor{keyword}{const}\ \&toCopy)\ =\ \textcolor{keyword}{delete};}
-\DoxyCodeLine{00035\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}\ \&operator=(\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneManager}}\ \&\&toMove)\ =\ \textcolor{keyword}{delete};}
+\DoxyCodeLine{00030\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}()\ =\ \textcolor{keyword}{delete};}
+\DoxyCodeLine{00031\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{\string~SceneContainer}}()\ =\ \textcolor{keyword}{delete};}
+\DoxyCodeLine{00032\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}(\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}\ \textcolor{keyword}{const}\ \&toCopy)\ =\ \textcolor{keyword}{delete};}
+\DoxyCodeLine{00033\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}(\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}\ \&\&toMove)\ =\ \textcolor{keyword}{delete};}
+\DoxyCodeLine{00034\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}\ \&operator=(\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}\ \textcolor{keyword}{const}\ \&toCopy)\ =\ \textcolor{keyword}{delete};}
+\DoxyCodeLine{00035\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}\ \&operator=(\mbox{\hyperlink{class_client_1_1_scene_manager}{SceneContainer}}\ \&\&toMove)\ =\ \textcolor{keyword}{delete};}
 \DoxyCodeLine{00036\ }
 \DoxyCodeLine{00037\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ std::shared\_ptr<Client::IScene>\ createScene(Client::SceneName\ scene);}
 \DoxyCodeLine{00038\ }
