--- a/docs/technical/latex/classClient_1_1SceneManager.tex
+++ b/docs/technical/latex/classClient_1_1SceneManager.tex
@@ -1,5 +1,5 @@
 \hypertarget{classClient_1_1SceneManager}{}\doxysection{Client\+::Scene\+Manager Class Reference}
-\label{classClient_1_1SceneManager}\index{Client::SceneManager@{Client::SceneManager}}
+\label{classClient_1_1SceneManager}\index{Client::SceneContainer@{Client::SceneContainer}}
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
