--- a/docs/technical/latex/class_client_1_1_scene_manager.tex
+++ b/docs/technical/latex/class_client_1_1_scene_manager.tex
@@ -1,5 +1,5 @@
 \doxysection{Client\+::Scene\+Manager Class Reference}
-\hypertarget{class_client_1_1_scene_manager}{}\label{class_client_1_1_scene_manager}\index{Client::SceneManager@{Client::SceneManager}}
+\hypertarget{class_client_1_1_scene_manager}{}\label{class_client_1_1_scene_manager}\index{Client::SceneContainer@{Client::SceneContainer}}
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
