--- a/docs/technical/latex/Manager_8hpp_source.tex
+++ b/docs/technical/latex/Manager_8hpp_source.tex
@@ -29,14 +29,14 @@
 \DoxyCodeLine{25             \textcolor{keyword}{virtual} \textcolor{keywordtype}{void} draw(sf::RenderWindow \&window) = 0;}
 \DoxyCodeLine{26     \};}
 \DoxyCodeLine{27 }
-\DoxyCodeLine{28     \textcolor{keyword}{class }\mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}} \{}
+\DoxyCodeLine{28     \textcolor{keyword}{class }\mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}} \{}
 \DoxyCodeLine{29         \textcolor{keyword}{public}:}
-\DoxyCodeLine{30             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}}() = \textcolor{keyword}{delete};}
-\DoxyCodeLine{31             \mbox{\hyperlink{classClient_1_1SceneManager}{\string~SceneManager}}() = \textcolor{keyword}{delete};}
-\DoxyCodeLine{32             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}}(\mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}} \textcolor{keyword}{const} \&toCopy) = \textcolor{keyword}{delete};}
-\DoxyCodeLine{33             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}}(\mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}} \&\&toMove) = \textcolor{keyword}{delete};}
-\DoxyCodeLine{34             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}} \&operator=(\mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}} \textcolor{keyword}{const} \&toCopy) = \textcolor{keyword}{delete};}
-\DoxyCodeLine{35             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}} \&operator=(\mbox{\hyperlink{classClient_1_1SceneManager}{SceneManager}} \&\&toMove) = \textcolor{keyword}{delete};}
+\DoxyCodeLine{30             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}}() = \textcolor{keyword}{delete};}
+\DoxyCodeLine{31             \mbox{\hyperlink{classClient_1_1SceneManager}{\string~SceneContainer}}() = \textcolor{keyword}{delete};}
+\DoxyCodeLine{32             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}}(\mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}} \textcolor{keyword}{const} \&toCopy) = \textcolor{keyword}{delete};}
+\DoxyCodeLine{33             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}}(\mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}} \&\&toMove) = \textcolor{keyword}{delete};}
+\DoxyCodeLine{34             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}} \&operator=(\mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}} \textcolor{keyword}{const} \&toCopy) = \textcolor{keyword}{delete};}
+\DoxyCodeLine{35             \mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}} \&operator=(\mbox{\hyperlink{classClient_1_1SceneManager}{SceneContainer}} \&\&toMove) = \textcolor{keyword}{delete};}
 \DoxyCodeLine{36 }
 \DoxyCodeLine{37             \textcolor{keyword}{static} std::shared\_ptr<Client::IScene> createScene(Client::SceneName scene);}
 \DoxyCodeLine{38 }
