[FIX] documentation naming

--- a/docs/technical/latex/ComponentArray_8hpp_source.tex
+++ b/docs/technical/latex/ComponentArray_8hpp_source.tex
@@ -1,5 +1,5 @@
 \hypertarget{ComponentArray_8hpp_source}{}\doxysection{Component\+Array.\+hpp}
-\label{ComponentArray_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/component/ComponentArray.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/component/ComponentArray.hpp}}
+\label{ComponentArray_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/component/ComponentArray.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/component/ComponentArray.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{1 \textcolor{comment}{//}}
@@ -13,7 +13,7 @@
 \DoxyCodeLine{9 \textcolor{preprocessor}{\#include <unordered\_map>}}
 \DoxyCodeLine{10 \textcolor{preprocessor}{\#include "{}Component.hpp"{}}}
 \DoxyCodeLine{11 \textcolor{preprocessor}{\#include "{}IComponent.hpp"{}}}
-\DoxyCodeLine{12 \textcolor{preprocessor}{\#include "{}ecs/entity/Entity.hpp"{}}}
+\DoxyCodeLine{12 \textcolor{preprocessor}{\#include "{}ECS/entity/Entity.hpp"{}}}
 \DoxyCodeLine{13 }
 \DoxyCodeLine{14 \textcolor{keyword}{template}<\textcolor{keyword}{typename} T>}
 \DoxyCodeLine{15 \textcolor{keyword}{class }\mbox{\hyperlink{classComponentArray}{ComponentArray}} : \textcolor{keyword}{public} \mbox{\hyperlink{classIComponentArray}{IComponentArray}}}
