--- a/docs/technical/latex/EntityManager_8hpp_source.tex
+++ b/docs/technical/latex/EntityManager_8hpp_source.tex
@@ -1,5 +1,5 @@
 \hypertarget{EntityManager_8hpp_source}{}\doxysection{Entity\+Manager.\+hpp}
-\label{EntityManager_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/entity/EntityManager.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/entity/EntityManager.hpp}}
+\label{EntityManager_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/entity/EntityManager.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/entity/EntityManager.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{1 \textcolor{comment}{//}}
@@ -11,7 +11,7 @@
 \DoxyCodeLine{7 \textcolor{preprocessor}{\#include <queue>}}
 \DoxyCodeLine{8 \textcolor{preprocessor}{\#include <array>}}
 \DoxyCodeLine{9 \textcolor{preprocessor}{\#include "{}Entity.hpp"{}}}
-\DoxyCodeLine{10 \textcolor{preprocessor}{\#include "{}ecs/Signature.hpp"{}}}
+\DoxyCodeLine{10 \textcolor{preprocessor}{\#include "{}ECS/Signature.hpp"{}}}
 \DoxyCodeLine{11 }
 \DoxyCodeLine{12 \textcolor{keyword}{class }\mbox{\hyperlink{classEntityManager}{EntityManager}}}
 \DoxyCodeLine{13 \{}
