--- a/docs/technical/latex/_component_array_8hpp_source.tex
+++ b/docs/technical/latex/_component_array_8hpp_source.tex
@@ -1,5 +1,5 @@
 \doxysection{Component\+Array.\+hpp}
-\hypertarget{_component_array_8hpp_source}{}\label{_component_array_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/component/ComponentArray.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/component/ComponentArray.hpp}}
+\hypertarget{_component_array_8hpp_source}{}\label{_component_array_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/component/ComponentArray.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/component/ComponentArray.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{//}}
@@ -13,7 +13,7 @@
 \DoxyCodeLine{00009\ \textcolor{preprocessor}{\#include\ <unordered\_map>}}
 \DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ "{}Component.hpp"{}}}
 \DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ "{}IComponent.hpp"{}}}
-\DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ "{}ecs/entity/Entity.hpp"{}}}
+\DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ "{}ECS/entity/Entity.hpp"{}}}
 \DoxyCodeLine{00013\ }
 \DoxyCodeLine{00014\ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ T>}
 \DoxyCodeLine{00015\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_component_array}{ComponentArray}}\ :\ \textcolor{keyword}{public}\ \mbox{\hyperlink{class_i_component_array}{IComponentArray}}}
