--- a/docs/technical/latex/_entity_manager_8hpp_source.tex
+++ b/docs/technical/latex/_entity_manager_8hpp_source.tex
@@ -1,5 +1,5 @@
 \doxysection{Entity\+Manager.\+hpp}
-\hypertarget{_entity_manager_8hpp_source}{}\label{_entity_manager_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/entity/EntityManager.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/entity/EntityManager.hpp}}
+\hypertarget{_entity_manager_8hpp_source}{}\label{_entity_manager_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/entity/EntityManager.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/entity/EntityManager.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{//}}
@@ -11,7 +11,7 @@
 \DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <queue>}}
 \DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ <array>}}
 \DoxyCodeLine{00009\ \textcolor{preprocessor}{\#include\ "{}Entity.hpp"{}}}
-\DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ "{}ecs/Signature.hpp"{}}}
+\DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ "{}ECS/Signature.hpp"{}}}
 \DoxyCodeLine{00011\ }
 \DoxyCodeLine{00012\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_entity_manager}{EntityManager}}}
 \DoxyCodeLine{00013\ \{}
