--- a/docs/technical/latex/_i_component_8hpp_source.tex
+++ b/docs/technical/latex/_i_component_8hpp_source.tex
@@ -1,5 +1,5 @@
 \doxysection{IComponent.\+hpp}
-\hypertarget{_i_component_8hpp_source}{}\label{_i_component_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/component/IComponent.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/component/IComponent.hpp}}
+\hypertarget{_i_component_8hpp_source}{}\label{_i_component_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/component/IComponent.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/component/IComponent.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{//}}
@@ -7,7 +7,7 @@
 \DoxyCodeLine{00003\ \textcolor{comment}{//}}
 \DoxyCodeLine{00004\ }
 \DoxyCodeLine{00005\ \textcolor{preprocessor}{\#pragma\ once}}
-\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ "{}ecs/entity/Entity.hpp"{}}}
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ "{}ECS/entity/Entity.hpp"{}}}
 \DoxyCodeLine{00007\ }
 \DoxyCodeLine{00008\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_i_component_array}{IComponentArray}}}
 \DoxyCodeLine{00009\ \{}
