--- a/docs/technical/latex/_system_manager_8hpp_source.tex
+++ b/docs/technical/latex/_system_manager_8hpp_source.tex
@@ -1,5 +1,5 @@
 \doxysection{System\+Manager.\+hpp}
-\hypertarget{_system_manager_8hpp_source}{}\label{_system_manager_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/system/SystemManager.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/system/SystemManager.hpp}}
+\hypertarget{_system_manager_8hpp_source}{}\label{_system_manager_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/system/SystemManager.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/system/SystemManager.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{//}}
@@ -9,8 +9,8 @@
 \DoxyCodeLine{00005\ \textcolor{preprocessor}{\#pragma\ once}}
 \DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <memory>}}
 \DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <unordered\_map>}}
-\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ "{}ecs/Signature.hpp"{}}}
-\DoxyCodeLine{00009\ \textcolor{preprocessor}{\#include\ "{}ecs/entity/Entity.hpp"{}}}
+\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ "{}ECS/Signature.hpp"{}}}
+\DoxyCodeLine{00009\ \textcolor{preprocessor}{\#include\ "{}ECS/entity/Entity.hpp"{}}}
 \DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ "{}System.hpp"{}}}
 \DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ <cassert>}}
 \DoxyCodeLine{00012\ }
