--- a/docs/technical/latex/files.tex
+++ b/docs/technical/latex/files.tex
@@ -10,16 +10,16 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/client/include/\+Scenes/\mbox{\hyperlink{_lobby_8hpp_source}{Lobby.\+hpp}} }{\pageref{_lobby_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/client/include/\+Scenes/\mbox{\hyperlink{_manager_8hpp_source}{Manager.\+hpp}} }{\pageref{_manager_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/client/include/\+Scenes/\mbox{\hyperlink{_welcome_8hpp_source}{Welcome.\+hpp}} }{\pageref{_welcome_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/\mbox{\hyperlink{_mediator_8hpp_source}{Registry.\+hpp}} }{\pageref{_mediator_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/\mbox{\hyperlink{_signature_8hpp_source}{Signature.\+hpp}} }{\pageref{_signature_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/component/\mbox{\hyperlink{_component_8hpp_source}{Component.\+hpp}} }{\pageref{_component_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/component/\mbox{\hyperlink{_component_array_8hpp_source}{Component\+Array.\+hpp}} }{\pageref{_component_array_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/component/\mbox{\hyperlink{_component_manager_8hpp_source}{Component\+Manager.\+hpp}} }{\pageref{_component_manager_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/component/\mbox{\hyperlink{_i_component_8hpp_source}{IComponent.\+hpp}} }{\pageref{_i_component_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/entity/\mbox{\hyperlink{_entity_8hpp_source}{Entity.\+hpp}} }{\pageref{_entity_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/entity/\mbox{\hyperlink{_entity_manager_8hpp_source}{Entity\+Manager.\+hpp}} }{\pageref{_entity_manager_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/system/\mbox{\hyperlink{_system_8hpp_source}{System.\+hpp}} }{\pageref{_system_8hpp_source}}{}
-\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ecs/system/\mbox{\hyperlink{_system_manager_8hpp_source}{System\+Manager.\+hpp}} }{\pageref{_system_manager_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/\mbox{\hyperlink{_mediator_8hpp_source}{Registry.\+hpp}} }{\pageref{_mediator_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/\mbox{\hyperlink{_signature_8hpp_source}{Signature.\+hpp}} }{\pageref{_signature_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/component/\mbox{\hyperlink{_component_8hpp_source}{Component.\+hpp}} }{\pageref{_component_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/component/\mbox{\hyperlink{_component_array_8hpp_source}{Component\+Array.\+hpp}} }{\pageref{_component_array_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/component/\mbox{\hyperlink{_component_manager_8hpp_source}{Component\+Manager.\+hpp}} }{\pageref{_component_manager_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/component/\mbox{\hyperlink{_i_component_8hpp_source}{IComponent.\+hpp}} }{\pageref{_i_component_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/entity/\mbox{\hyperlink{_entity_8hpp_source}{Entity.\+hpp}} }{\pageref{_entity_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/entity/\mbox{\hyperlink{_entity_manager_8hpp_source}{Entity\+Manager.\+hpp}} }{\pageref{_entity_manager_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/system/\mbox{\hyperlink{_system_8hpp_source}{System.\+hpp}} }{\pageref{_system_8hpp_source}}{}
+\item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/ECS/system/\mbox{\hyperlink{_system_manager_8hpp_source}{System\+Manager.\+hpp}} }{\pageref{_system_manager_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/network/\mbox{\hyperlink{_commands_8hpp_source}{Commands.\+hpp}} }{\pageref{_commands_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/network/\mbox{\hyperlink{_messages_8hpp_source}{Messages.\+hpp}} }{\pageref{_messages_8hpp_source}}{}
 \item\contentsline{section}{/\+Users/xavierv/\+Developer/\+EPITECH/\+R-\/\+Type/game\+Engine/include/network/\mbox{\hyperlink{_responses_8hpp_source}{Responses.\+hpp}} }{\pageref{_responses_8hpp_source}}{}
