--- a/docs/technical/latex/IComponent_8hpp_source.tex
+++ b/docs/technical/latex/IComponent_8hpp_source.tex
@@ -1,5 +1,5 @@
 \hypertarget{IComponent_8hpp_source}{}\doxysection{IComponent.\+hpp}
-\label{IComponent_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/component/IComponent.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/component/IComponent.hpp}}
+\label{IComponent_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/component/IComponent.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/component/IComponent.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{1 \textcolor{comment}{//}}
@@ -7,7 +7,7 @@
 \DoxyCodeLine{3 \textcolor{comment}{//}}
 \DoxyCodeLine{4 }
 \DoxyCodeLine{5 \textcolor{preprocessor}{\#pragma once}}
-\DoxyCodeLine{6 \textcolor{preprocessor}{\#include "{}ecs/entity/Entity.hpp"{}}}
+\DoxyCodeLine{6 \textcolor{preprocessor}{\#include "{}ECS/entity/Entity.hpp"{}}}
 \DoxyCodeLine{7 }
 \DoxyCodeLine{8 \textcolor{keyword}{class }\mbox{\hyperlink{classIComponentArray}{IComponentArray}}}
 \DoxyCodeLine{9 \{}
