--- a/docs/technical/latex/SystemManager_8hpp_source.tex
+++ b/docs/technical/latex/SystemManager_8hpp_source.tex
@@ -1,5 +1,5 @@
 \hypertarget{SystemManager_8hpp_source}{}\doxysection{System\+Manager.\+hpp}
-\label{SystemManager_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/system/SystemManager.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/system/SystemManager.hpp}}
+\label{SystemManager_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/system/SystemManager.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/system/SystemManager.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{1 \textcolor{comment}{//}}
@@ -9,8 +9,8 @@
 \DoxyCodeLine{5 \textcolor{preprocessor}{\#pragma once}}
 \DoxyCodeLine{6 \textcolor{preprocessor}{\#include <memory>}}
 \DoxyCodeLine{7 \textcolor{preprocessor}{\#include <unordered\_map>}}
-\DoxyCodeLine{8 \textcolor{preprocessor}{\#include "{}ecs/Signature.hpp"{}}}
-\DoxyCodeLine{9 \textcolor{preprocessor}{\#include "{}ecs/entity/Entity.hpp"{}}}
+\DoxyCodeLine{8 \textcolor{preprocessor}{\#include "{}ECS/Signature.hpp"{}}}
+\DoxyCodeLine{9 \textcolor{preprocessor}{\#include "{}ECS/entity/Entity.hpp"{}}}
 \DoxyCodeLine{10 \textcolor{preprocessor}{\#include "{}System.hpp"{}}}
 \DoxyCodeLine{11 \textcolor{preprocessor}{\#include <cassert>}}
 \DoxyCodeLine{12 }
