--- a/docs/technical/latex/System_8hpp_source.tex
+++ b/docs/technical/latex/System_8hpp_source.tex
@@ -1,5 +1,5 @@
 \hypertarget{System_8hpp_source}{}\doxysection{System.\+hpp}
-\label{System_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/system/System.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ecs/system/System.hpp}}
+\label{System_8hpp_source}\index{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/system/System.hpp@{/home/raphael/epitech/tech3/OOP/R-\/Type/gameEngine/include/ECS/system/System.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{1 \textcolor{comment}{//}}
@@ -9,7 +9,7 @@
 \DoxyCodeLine{5 \textcolor{preprocessor}{\#pragma once}}
 \DoxyCodeLine{6 }
 \DoxyCodeLine{7 \textcolor{preprocessor}{\#include <set>}}
-\DoxyCodeLine{8 \textcolor{preprocessor}{\#include "{}ecs/entity/Entity.hpp"{}}}
+\DoxyCodeLine{8 \textcolor{preprocessor}{\#include "{}ECS/entity/Entity.hpp"{}}}
 \DoxyCodeLine{9 }
 \DoxyCodeLine{10 \textcolor{keyword}{class }\mbox{\hyperlink{classSystem}{System}}}
 \DoxyCodeLine{11 \{}
