--- a/docs/technical/latex/_system_8hpp_source.tex
+++ b/docs/technical/latex/_system_8hpp_source.tex
@@ -1,5 +1,5 @@
 \doxysection{System.\+hpp}
-\hypertarget{_system_8hpp_source}{}\label{_system_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/system/System.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ecs/system/System.hpp}}
+\hypertarget{_system_8hpp_source}{}\label{_system_8hpp_source}\index{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/system/System.hpp@{/Users/xavierv/Developer/EPITECH/R-\/Type/gameEngine/include/ECS/system/System.hpp}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{//}}
@@ -9,7 +9,7 @@
 \DoxyCodeLine{00005\ \textcolor{preprocessor}{\#pragma\ once}}
 \DoxyCodeLine{00006\ }
 \DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <set>}}
-\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ "{}ecs/entity/Entity.hpp"{}}}
+\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ "{}ECS/entity/Entity.hpp"{}}}
 \DoxyCodeLine{00009\ }
 \DoxyCodeLine{00010\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_system}{System}}}
 \DoxyCodeLine{00011\ \{}
